Basic structure done

--- a/IT Beleg Blog/index.html
+++ b/IT Beleg Blog/index.html
@@ -6,9 +6,13 @@
     <title>Blog von Tom und Edwin</title>
 </head>
 <body>
-<h1>Hier könnte Ihre Werbung stehen!</h1>
-<p>500€ am Tag</p>
-<img src="dog.jpg" alt="Not Snoopp">
+<div>
+    <a href="/index.html">Home</a>
+    <a href="/blog/index.html">Blog</a>
 
+    <h1>Hier könnte Ihre Werbung stehen!</h1>
+    <p>500€ am Tag</p>
+    <img src="dog.jpg" alt="Not Snoopp">
+</div>
 </body>
 </html>
