--- a/IT Beleg Blog/index.html
+++ b/IT Beleg Blog/index.html
@@ -1,18 +1,49 @@
+<!-- This is the Blog's homepage. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
     <title>Blog von Tom und Edwin</title>
 </head>
 <body>
 <div>
-    <a href="/index.html">Home</a>
-    <a href="/blog/index.html">Blog</a>
 
-    <h1>Hier könnte Ihre Werbung stehen!</h1>
-    <p>500€ am Tag</p>
-    <img src="dog.jpg" alt="Not Snoopp">
+</div>
+
+<div class="row">
+    <div class="col-sm-8">
+        <ul>
+            <li>Entry 1</li>
+            <li>Entry 2</li>
+            <li>Entry 3</li>
+        </ul>
+    </div>
+    <div class="col-sm-4">
+        <ul>
+            <li>Entry 1</li>
+            <li>Entry 2</li>
+            <li>Entry 3</li>
+            <li>Entry 4</li>
+            <li>Entry 5</li>
+            <li>Entry 6</li>
+            <li>Entry 7</li>
+            <li>Entry 8</li>
+            <li>Entry 9</li>
+            <li>Entry 10</li>
+        </ul>
+    </div>
+</div>
+
+<div id="newest posts">
+
+</div>
+
+<div id="list of posts">
+
 </div>
 </body>
 </html>
