--- a/IT Beleg Blog/index.html
+++ b/IT Beleg Blog/index.html
@@ -10,33 +10,39 @@
     <title>Blog von Tom und Edwin</title>
 </head>
 <body>
-<div>
-
+<div class="container-fluid">
+    <div class="jumbotron">
+        <h1>WELCOME TO OUR BLOG!</h1>
+        <p>Take a look around, we're sure you'll find something you'll like!</p>
+    </div>
+    <div class="row">
+        <div class="col-sm-8">
+            <h2>Look at our last three posts!<br><small>They are very good.</small></h2>
+            <ul>
+                <li>Entry 1</li>
+                <li>Entry 2</li>
+                <li>Entry 3</li>
+            </ul>
+        </div>
+        <div class="col-sm-4">
+            <h2>Look at this list of posts!<br><small>They are all terrific.</small></h2>
+            <ul>
+                <li>Entry 1</li>
+                <li>Entry 2</li>
+                <li>Entry 3</li>
+                <li>Entry 4</li>
+                <li>Entry 5</li>
+                <li>Entry 6</li>
+                <li>Entry 7</li>
+                <li>Entry 8</li>
+                <li>Entry 9</li>
+                <li>Entry 10</li>
+            </ul>
+        </div>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-sm-8">
-        <ul>
-            <li>Entry 1</li>
-            <li>Entry 2</li>
-            <li>Entry 3</li>
-        </ul>
-    </div>
-    <div class="col-sm-4">
-        <ul>
-            <li>Entry 1</li>
-            <li>Entry 2</li>
-            <li>Entry 3</li>
-            <li>Entry 4</li>
-            <li>Entry 5</li>
-            <li>Entry 6</li>
-            <li>Entry 7</li>
-            <li>Entry 8</li>
-            <li>Entry 9</li>
-            <li>Entry 10</li>
-        </ul>
-    </div>
-</div>
+
 
 <div id="newest posts">
 
