--- a/IT Beleg Blog/index.html
+++ b/IT Beleg Blog/index.html
@@ -2,17 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="main.css">
     <title>Blog von Tom und Edwin</title>
 </head>
 <body>
-<div>
-    <a href="/index.html">Home</a>
-    <a href="/blog/index.html">Blog</a>
 
-    <h1>Hier könnte Ihre Werbung stehen!</h1>
-    <p>500€ am Tag</p>
-    <img src="dog.jpg" alt="Not Snoopp">
-</div>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">WebSiteName</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li><a href="#">Home</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Menu
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">New Post</a></li>
+                    <li><a href="#">Edit Post</a></li>
+                    <li><a href="#">Upload Picture</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 </body>
 </html>
