--- a/IT Beleg Blog/index.html
+++ b/IT Beleg Blog/index.html
@@ -13,8 +13,10 @@
     <title>Blog von Tom und Edwin</title>
 </head>
 <body>
+
+<!-- Navbar at the top of the page -->
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">WebSiteName</a>
         </div>
@@ -36,7 +38,7 @@
 </nav>
 
 
-<div class="container-fluid">
+<div class="container">
     <div class="jumbotron">
         <h1>WELCOME TO OUR BLOG!</h1>
         <p>Take a look around, we're sure you'll find something you'll like!</p>
