--- a/IT Beleg Blog/newPost.html
+++ b/IT Beleg Blog/newPost.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!-- Main Quill library -->
+    <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script>
+
+    <!-- Theme included stylesheets -->
+    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+
+
     <link rel="stylesheet" href="main.css">
     <title>Create New Post</title>
 </head>
@@ -27,7 +37,7 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Menu
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/IT_Beleg/IT Beleg Blog//newPost.html">New Post</a></li>
+                    <li><a href="#">New Post</a></li>
                     <li><a href="#">Edit Post</a></li>
                     <li><a href="#">Upload Picture</a></li>
                 </ul>
@@ -36,22 +46,41 @@
     </div>
 </nav>
 
+
 <!-- input form to write new posts -->
 <div class="container">
+    <div id="toolbar"></div>
+    <div id="editor"></div>
 
-    <!-- title field -->
-    <div class="form-group">
-        <label for="title">Write a new blog post:</label>
-        <input type="text" class="form-control" id="title" placeholder="Title...">
-    </div>
-    <!-- text field -->
-    <div class="form-group">
-        <textarea class="form-control" id="content" rows="7" placeholder="Write something here..."></textarea>
-    </div>
+    <div class="col-xs-12" style="height:20px;"></div>
 
-    <!-- post and delete buttons -->
-    <button type="button" class="btn btn-default btn-md pull-right">Delete</button>
-    <button type="button" class="btn btn-primary btn-md pull-right">Post</button>
+    <button type="button" class="btn btn-primary btn-md pull-right" id="saveDelta">Save</button>
 </div>
+
+
+<script>
+    var toolbarOptions = [
+        [{'font': []}],
+        [{'header': [1, 2, 3, 4, 5, 6, false]}],
+        ['bold', 'italic', 'underline', 'strike'],
+        [{'color': []}, {'background': []}],
+        [{'list': 'ordered'}, {'list': 'bullet'}, {'align': []}],
+        ['link', 'image']
+    ];
+
+    var quill = new Quill('#editor', {
+        modules: {
+            toolbar: toolbarOptions
+        },
+
+        theme: 'snow'
+    })
+
+    $('#saveDelta').click(function(){
+        window.delta = quill.getContents();
+        console.log(delta);
+    })
+</script>
+
 </body>
 </html>
