--- a/IT Beleg Blog/newPost.html
+++ b/IT Beleg Blog/newPost.html
@@ -25,12 +25,12 @@
 
 <!-- Navbar at the top of the page -->
 <nav class="navbar navbar-inverse navbar-static-top">
-    <div class="container-fluid">
+    <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">New Blog Post</a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="/IT_Beleg/IT Beleg Blog/index.html">Home</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
@@ -76,10 +76,65 @@
         theme: 'snow'
     })
 
-    $('#saveDelta').click(function(){
+    $('#saveDelta').click(function () {
         window.delta = quill.getContents();
-        console.log(delta);
+        var JSONString = JSON.stringify(delta);
+        var dateObj = new Date();
+        var year = dateObj.getFullYear();
+        var month = dateObj.getMonth() + 1;
+        var day = dateObj.getDate();
+        var hour = dateObj.getHours();
+        var minute = dateObj.getMinutes();
+        var second = dateObj.getSeconds();
+        download(JSONString, year + '-' + month + '-' + day + ' ' + hour + '-' + minute + '-' + second + '.txt', 'plain')
     })
+
+
+    function download(strData, strFileName, strMimeType) {
+        var D = document,
+            A = arguments,
+            a = D.createElement("a"),
+            d = A[0],
+            n = A[1],
+            t = A[2] || "text/plain";
+
+        //build download link:
+        a.href = "data:" + strMimeType + "charset=utf-8," + escape(strData);
+
+
+        if (window.MSBlobBuilder) { // IE10
+            var bb = new MSBlobBuilder();
+            bb.append(strData);
+            return navigator.msSaveBlob(bb, strFileName);
+        }
+        /* end if(window.MSBlobBuilder) */
+
+
+        if ('download' in a) { //FF20, CH19
+            a.setAttribute("download", n);
+            a.innerHTML = "downloading...";
+            D.body.appendChild(a);
+            setTimeout(function () {
+                var e = D.createEvent("MouseEvents");
+                e.initMouseEvent("click", true, false, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
+                a.dispatchEvent(e);
+                D.body.removeChild(a);
+            }, 66);
+            return true;
+        }
+        ;
+        /* end if('download' in a) */
+
+
+        //do iframe dataURL download: (older W3)
+        var f = D.createElement("iframe");
+        D.body.appendChild(f);
+        f.src = "data:" + (A[2] ? A[2] : "application/octet-stream") + (window.btoa ? ";base64" : "") + "," + (window.btoa ? window.btoa : escape)(strData);
+        setTimeout(function () {
+            D.body.removeChild(f);
+        }, 333);
+        return true;
+    }
 </script>
 
 </body>
